añadido boton de empezar y textview que marca las indicaciones y cuenta el numero de vueltas

--- a/res/layout/activity_main_colores.xml
+++ b/res/layout/activity_main_colores.xml
@@ -6,6 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.simoncolor.mainColores">
+    <Button
+        android:text="@string/start"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button" />
+
+    <TextView
+        android:text="@string/explicacion"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:id="@+id/explicacion" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
 
     <GridLayout
         android:layout_width="wrap_content"
